examples/zone-aware/envoy.yaml
cluster_manager:
  local_cluster_name: test-envoy-service

layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        overload:
          global_downstream_max_connections: 50000
        upstream:
          zone_routing:
            min_cluster_size: 1

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: /dev/stdout
              json_format:
                protocol: "%PROTOCOL%"
                duration: "%DURATION%"
                response_code: "%RESPONSE_CODE%"
                response_flags: "%RESPONSE_FLAGS%"
                x_request_id: "%REQ(X-REQUEST-ID)%"
          route_config:
            name: test
            virtual_hosts:
            - name: test
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: nginxdemo
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  # fake record
  - name: test-envoy-service
    connect_timeout: 1s
    type: STRICT_DNS
    load_assignment:
      cluster_name: test-envoy-service
      endpoints:
      - locality:
          zone: a
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 18080
      - locality:
          zone: b
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 18080
  - name: nginxdemo
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    type: STRICT_DNS
    load_assignment:
      cluster_name: nginxdemo
      endpoints:
      - locality:
          zone: a
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nginxdemo-a
                port_value: 80
      - locality:
          zone: b
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nginxdemo-b
                port_value: 80
  - name: xds_cluster
    connect_timeout: 1s
    type: STRICT_DNS
    http2_protocol_options: {}
    load_assignment:
      cluster_name: xds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # add /etc/host for develop
                # <host external ip> envoy-control-plane
                address: envoy-control-plane
                port_value: 18080
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000
